8200277: Compiling native media code fails when using OpenJDK build as boot JDK
Reviewed-by: jvos, prr